# blink-multicamera-stitch

./: .gitignore  .veve  LICENSE  MANIFEST.in  README.md  annotate.py  cluster.py  config.sample.yaml  data.py  dedupe.py  extract.py  helpers.py  main.py  package.py  preflight.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  stitch.py  test_threading_resource.py
docs/_internal/: input_discovery.md  progress-system.md
gui/: index.html  main.js  package.json  preload.js
progress/: errors.py  state.py  ui.py
scripts/: run_discovery_check.py
src/blink_stitch/: __init__.py  annotate.py  cli.py  cluster.py  extract.py  helpers.py  main.py  package.py  preflight.py
src/progress/: errors.py  state.py  ui.py
src/tests/: test_discovery.py  test_discovery_audio_preference.py  test_main_discovery_integration.py
