[metadata]
name = blink-stitch
version = 0.0.0
description = Blink multicamera stitching utilities (packaged)

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.8

[options.entry_points]
console_scripts =
    blink-stitch = blink_stitch.cli:main
[options.package_data]
blink_stitch =
    assets/*
    docs/*